// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkstyle formatter should empty messages 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<checkstyle version=\\"4.3\\">
  <file name=\\"empty.html\\">
  </file>
</checkstyle>
"
`;

exports[`checkstyle formatter should empty result 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<checkstyle version=\\"4.3\\">
</checkstyle>
"
`;

exports[`checkstyle formatter should generate checkstyle xml 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<checkstyle version=\\"4.3\\">
  <file name=\\"regular.html\\">
    <error line=\\"1\\" column=\\"5\\" severity=\\"error\\" message=\\"An error (foo)\\" source=\\"htmlvalidate.rules.foo\\" />
    <error line=\\"2\\" column=\\"4\\" severity=\\"warning\\" message=\\"A warning (bar)\\" source=\\"htmlvalidate.rules.bar\\" />
  </file>
  <file name=\\"edge-cases.html\\">
    <error line=\\"1\\" column=\\"1\\" severity=\\"error\\" message=\\"Has invalid severity (foo)\\" source=\\"htmlvalidate.rules.foo\\" />
    <error line=\\"2\\" column=\\"2\\" severity=\\"error\\" message=\\"Escape &lt;script language=&quot;jabbascript&quot;&gt; &amp; &lt;span id=&apos;foo&apos;&gt; (bar)\\" source=\\"htmlvalidate.rules.bar\\" />
  </file>
</checkstyle>
"
`;
